src/objects/Program_Relationships__c.object
<CustomObject>
    <description>Details relationship between warrant | program | client</description>
    <fields>
        <fullName>ACS_Agency__c</fullName>
        <label>ACS Agency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACS_Case_Type__c</fullName>
        <label>ACS Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ACS_Case_Worker_Email__c</fullName>
        <label>ACS Case Worker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACS_Case_Worker_Name__c</fullName>
        <label>ACS Case Worker Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACS_Case_Worker_Phone__c</fullName>
        <label>ACS Case Worker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APT_Counselor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APT Counselor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Billable__c</fullName>
        <formula>if(or( 
and(includes(Program__r.Billable_for_START__c, &quot;START&quot;), 
or(contains(Warrant__r.P_C_ID__c, &quot;DTC&quot;), contains(Warrant__r.P_C_ID__c, &quot;CCM&quot;), contains(Warrant__r.P_C_ID__c, &quot;TRP&quot;))), 

and(includes(Program__r.Billable_for_START__c, &quot;CIRT&quot;), 
contains(Warrant__r.P_C_ID__c, &quot;CRT&quot;)) 
), 
&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the provider is generally billable for START. START admin/ SPA staff can override this value using the Referral Billable? field.</inlineHelpText>
        <label>Account Billable?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_at_Exit_Picklist__c</fullName>
        <description>1/23/15 replaces Active at Exit? formula to remove the burden of entering exact exit dates, and to provide an indication the information was consciously checked and entered.</description>
        <label>Active at Exit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_at_Exit__c</fullName>
        <formula>and(not(isblank(Warrant__r.Current_Exit_Date__c )),  Program_Start_Date__c &lt;= Warrant__r.Current_Exit_Date__c, or(isblank(Discharge_Date_Phone_Visit__c ),  Discharge_Date_Phone_Visit__c &gt; Warrant__r.Current_Exit_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active at Exit Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_at_Intake__c</fullName>
        <formula>and(not(isblank(Warrant__r.Current_Intake_Date__c )),  Program_Start_Date__c &lt;= Warrant__r.Current_Intake_Date__c, or(isblank(Discharge_Date_Phone_Visit__c ),  Discharge_Date_Phone_Visit__c &gt; Warrant__r.Current_Intake_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active at Intake?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjusted_Created_Date__c</fullName>
        <description>Used in determining most recent program relationship - if field is not null reference field in program cycle rollup logic</description>
        <label>Adjusted Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <label>Certificate Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Data_Entry_begins_in__c</fullName>
        <label>Class Data Entry begins in</label>
        <picklist>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Consent__c</fullName>
        <label>Client Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Escorted__c</fullName>
        <label>Client Escorted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Warrant__r.FirstName &amp; &quot; &quot; &amp;  Warrant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_s_ID_at_Provider__c</fullName>
        <label>Client&apos;s ID at Provider</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <description>created for APT program relationships</description>
        <label>Completion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Successful Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Currently Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Report__c</fullName>
        <description>Populated via trigger on follow up object with date report signed</description>
        <label>Date of Last Report</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_In_Program_based_on_Phone_Call__c</fullName>
        <description>Days in Program formula field based on Phone Call/ Visit information. Does not consider MSR information at all.</description>
        <formula>if(
   or(isblank(Program_Start_Date__c),
      text(Program_Status_Phone_Visit__c) = &quot;Pending Intake&quot;),

      NULL,
   
   if(isblank(Discharge_Date_Phone_Visit__c), (datevalue(Last_Verified_Phone_Visit__c) - Program_Start_Date__c) + 1, (Discharge_Date_Phone_Visit__c - Program_Start_Date__c) + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days in Program formula field based on Phone Call/ Visit information. Does not consider MSR information at all.</inlineHelpText>
        <label>Days In Program based on Phone Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Program__c</fullName>
        <description>QC: - Kevin may need to be redone. Not sure why using phone/visit discharge date. May need a hidden that stores Phone/visit discharge date unless written discharge date exists. 
if(Discharge_Date_Phone_Visit__c=Program_Start_Date__c,1,if(Discharge_Date_Phone_Visit__c&gt;Program_Start_Date__c,Discharge_Date_Phone_Visit__c-Program_Start_Date__c,datevalue(Last_Verified_Phone_Visit__c)-Program_Start_Date__c))

Calculate number of days client has been in a Program Relationship</description>
        <formula>if(
   or(isblank(Date_of_Last_Report__c),      
       isblank(Program_Start_Date__c),
      text(Program_Status_by_Report__c) = &quot;Pending Intake&quot;,
      text(Program_Status_Phone_Visit__c) = &quot;Pending Intake&quot;),

      NULL,
   
   if(isblank(Discharge_Date_by_Report__c), (datevalue(Date_of_Last_Report__c) - Program_Start_Date__c) + 1, (Discharge_Date_by_Report__c - Program_Start_Date__c) + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designated_Provider__c</fullName>
        <description>Health Homes and Insurance Companies</description>
        <label>Designated Provider</label>
        <picklist>
            <controllingField>Insurance_Type__c</controllingField>
            <picklistValues>
                <fullName>Affinity Health Plan, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americhoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amerigroup New York, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amida Care, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beacon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx Accountable Healthcare Network Health Home (BAHN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx Lebanon Hospital Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Health Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Care Management Partners (CCMP), LLC (Visiting Nurse Service of New York Home Care)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Health Care Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Health Care Network (Queens Coordinated Care Partners)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuum Health Home Network (St. Luke&apos;s-Roosevelt Hospital Center)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinated Behavioral Care Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emblem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empire Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidelis Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health First PHSP, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Insurance Plan of Greater NY (HIP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthPlus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heritage Health and Housing Home Network: Heritage Health Home Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MetroPlus Health Plan, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Health Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Shore LIJ Health Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYS Catholic Health Plan, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxford (Medicaid MC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Brooklyn Health Home LLC d/b/a Brooklyn Health Home (Maimonides Medical Center)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diploma_Type__c</fullName>
        <label>Diploma Type</label>
        <picklist>
            <controllingField>Institution_Type__c</controllingField>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEP Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSE Diploma</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discharge_Date_Phone_Visit__c</fullName>
        <inlineHelpText>For ACS Involvement, this it the Closing Date of the case.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Date_by_Report__c</fullName>
        <label>Discharge Date by Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Transfer_Reason__c</fullName>
        <label>Discharge/Transfer Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Relationships (Employer)</relationshipLabel>
        <relationshipName>Program_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employed FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Training/Readiness Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escort_Date__c</fullName>
        <formula>Warrant__r.Escort_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escort Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escort_Result__c</fullName>
        <formula>TEXT(Warrant__r.Escort_Result__c)</formula>
        <label>Escort Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Reason__c</fullName>
        <label>Exit Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Contact_Phone__c</fullName>
        <formula>Program__r.Follow_Up_Contact_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow Up Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <label>Follow Up Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foloow_Up_Contact_Name__c</fullName>
        <formula>Program__r.Follow_Up_Contact_Name__r.FirstName + &quot; &quot; +  Program__r.Follow_Up_Contact_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow Up Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HARP_Code_Definition__c</fullName>
        <formula>CASE(HARP_Code__c , 
&quot;H1&quot;,&quot;HARP enrolled without HCBS eligibility&quot;,
&quot;H2&quot;,&quot;HARP enrolled with Tier 1 HCBS eligibility&quot;,
&quot;H3&quot;,&quot;HARP enrolled with Tier 2 HCBS eligibility&quot;,
&quot;H4&quot;,&quot;HIV SNP HARP – eligible without HCBS eligibility&quot;,
&quot;H5&quot;,&quot;HIV SNP HARP – eligible with Tier 1 HCBS eligibility&quot;,
&quot;H6&quot;,&quot;HIV SNP HARP – eligible with Tier 2 HCBS eligibility&quot;,
&quot;H7&quot;,&quot;Opted-out of HARP&quot;,
&quot;H8&quot;,&quot;State-identified for HARP Assessment&quot;,
&quot;H9&quot;,&quot;HARP eligible- pending enrollment&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HARP Code Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HARP_Code__c</fullName>
        <description>HARP eligibility status from ePaces</description>
        <inlineHelpText>HARP eligibility status from ePaces</inlineHelpText>
        <label>HARP Code</label>
        <picklist>
            <picklistValues>
                <fullName>H1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No H-code found in ePACES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Home_Notes__c</fullName>
        <label>Health Home Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Health_Home_RPT__c</fullName>
        <description>For use in Insurance subflow only</description>
        <formula>includes(Program__r.Agency_Type__c, &quot;Health Home&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Home RPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hourly_Pay__c</fullName>
        <label>Hourly Pay</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Removed_from_Home_Care_Type__c</fullName>
        <label>If Removed from Home, Care Type</label>
        <picklist>
            <picklistValues>
                <fullName>Foster Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kinship Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Recognized_Certificate__c</fullName>
        <label>Industry Recognized Certificate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiated_by_CASES__c</fullName>
        <label>Initiated by CASES?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <label>Institution Type</label>
        <picklist>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSE Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary Prep</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider_Type__c</fullName>
        <label>Insurance Provider Type</label>
        <picklist>
            <picklistValues>
                <fullName>Managed Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee-for-Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <description>Medicaid/Medicare</description>
        <label>Insurance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HH Controller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Pay_Subsidized__c</fullName>
        <label>Is Pay Subsidized?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Verified_Phone_Visit__c</fullName>
        <label>Last Verified by Phone/Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Database Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_PRP_nParticID__c</fullName>
        <description>FOR MIGRATION CROSS CHECKING. TO BE DELETED. Eve Nunez</description>
        <label>Legacy PRP nParticID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Stay_days__c</fullName>
        <formula>BLANKVALUE( Discharge_Date_Phone_Visit__c, Today()) -  Program_Start_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Stay (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Linkage_Billable__c</fullName>
        <label>Linkage Billable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSR_Contact_Name__c</fullName>
        <formula>Program__r.MSR_Contact_Name__r.FirstName + &quot; &quot; +
 Program__r.MSR_Contact_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSR Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSR_Contact_Phone__c</fullName>
        <formula>Program__r.MSR_Contact_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSR Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicaid_Sequence_Number__c</fullName>
        <label>Medicaid Sequence Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_Part__c</fullName>
        <inlineHelpText>Only used for Medicaid History Program Relationships</inlineHelpText>
        <label>Medicare Part</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Employer__c</fullName>
        <description>For when it does not make sense to enter the employer in Account (e.g. self employed).</description>
        <inlineHelpText>Fill in Other Employer if Employer is not the name of a business and cannot be entered as an Account (e.g., &quot;self-employed&quot;).</inlineHelpText>
        <label>Other Employer</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Provider__c</fullName>
        <description>If Designated Provider is &quot;Other&quot;, enter details here</description>
        <label>Other Provider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Consent__c</fullName>
        <label>Parent Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>HARP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mainstream Managed Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Account_ID__c</fullName>
        <formula>Program__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <inlineHelpText>The Star Date is the date on which the linkage is made.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Status_Health_Provider__c</fullName>
        <formula>IF(
OR
(
ISNULL(Program_Start_Date__c),NOT ISNULL(Discharge_Date_Phone_Visit__c)
)
,&quot;INACTIVE&quot;,&quot;ACTIVE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Status (Health Provider)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Status_Phone_Visit__c</fullName>
        <label>Program Status by Phone/Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Never Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Intake</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>